docs: calibrate documentation consistency across docs/, add comprehensive Chinese code comments, update todo.md and README.md